// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Renders with default content 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      columns={Array []}
      data={Array []}
      defaultFilterMethod={[Function]}
      loading={false}
    />
  </div>
</div>
`;

exports[`Table Renders with deleteModal 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      columns={Array []}
      data={Array []}
      defaultFilterMethod={[Function]}
      loading={false}
    />
  </div>
</div>
`;

exports[`Table Renders with styling, checks styling function calling 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      columns={Array []}
      data={Array []}
      defaultFilterMethod={[Function]}
      getTrProps={[Function]}
      loading={false}
    />
  </div>
</div>
`;

exports[`Table Renders with tableButton 1`] = `
<div>
  <div />
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      columns={Array []}
      data={Array []}
      defaultFilterMethod={[Function]}
      getTrProps={[Function]}
      loading={false}
    />
  </div>
</div>
`;
